# llm-engineering

./: .gitignore
CourseNotes/: Anoconda.notes  PythonVirtualEnvironment.notes
Week-01/: check_api_key.py  send_first_prompt.py
Week-01/Day-01/: imports_test.py  summarize_website.py  summarize_website_enhanced.py  summarize_website_modularized.py  summarizer.py  website_scraper.py
Week-01/Day-01/website_summarizer_project/: README.md
Week-01/Day-05/: test_website.py  test_website_links.py  website.py  website_links.py
Week-01/Day-05/FunctionalVersion/: brochure_creation.py  brochure_links.py  website_brochure.py  website_links.py  website_links_test.py  website_links_unit_test.py
Week-01/Day-05/ObjectOrientedVersion/: brochure_creation_test.py  brochure_links_test.py  company_brochure.md  large_language_model.py  website.py  (+1 more)
Week-01/website_summarizer_project/: .gitignore  pyproject.toml  summarize_website.py
Week-01/website_summarizer_project/websummary/: summarizer.py
Week-02/Day-03/: chatgpt.py  main.py
Week-03/Day-02/: context_answering.py  cuda_test.py  device_usage.py  entity_recognition.py  image_gen_v1.py  image_gen_v2.py  sentiment.py  speech.py  text_summarization.py  text_summarize_v2.py  zero_shot.py
Week-03/Day-03/: main.py  pip_install_instructios.notes  tokenizer.py
Week-03/Day-04/: generator.py  instruct_models.py  main.py  memory.py  messages.py  quant_config.py  the_model.py  tokenizer.py
Week-05/: brochure_creation_main.py  brochure_links_prompts.py  language_translation_prompts.py  large_language_model.py  website_details.py
(+71 files in other folders)
